@@ -49,6 +49,7 @@ latex_to_bakoma = {
     r'\Rightparen'          : ('cmex10',  81),
     r'\LEFTparen'           : ('cmex10', 119),
     r'\RIGHTparen'          : ('cmex10',  87),
+    r'\LEFTbracket'         : ('cmex10', 125),
     r'\RIGHTbracket'        : ('cmex10',  93),
     r'\LEFTbrace'           : ('cmex10',  70),
     r'\RIGHTbrace'          : ('cmex10', 107),
@@ -236,6 +237,7 @@ latex_to_bakoma = {
     r'\equiv'               : ('cmsy10',  35),
     r'\subseteq'            : ('cmsy10', 103),
     r'\supseteq'            : ('cmsy10',  42),
+    r'\leq'                 : ('cmsy10',  14),
     r'\geq'                 : ('cmsy10',  29),
     r'\preceq'              : ('cmsy10',  79),
     r'\succeq'              : ('cmsy10', 131),
